--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,15 @@ Flask-SQLAlchemy==3.0.2
 Flask-WTF==1.0.1
 greenlet==2.0.1
 idna==3.4
+importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 PyMySQL==1.0.2
 requests==2.28.1
 SQLAlchemy==1.4.43
+stripe==4.2.0
 urllib3==1.26.12
 Werkzeug==2.2.2
 WTForms==3.0.1
+zipp==3.10.0
